--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <link href="assets/css/custom.css" rel="stylesheet">
 
     <!-- code by bharath  -->
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="assets/css/admin.css" rel="stylesheet">
     <link href="assets/css/lender.css" rel="stylesheet">
     <!-- end of bharath  -->
@@ -32,6 +32,14 @@
   </head>
 
   <body>
+
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
+</head>
+<body>  
+    <!-- <body class="mat-typography" style="height: 100%;"> -->
 
     <app-root></app-root>
 
