--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,8 @@
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/custom.css" rel="stylesheet">
 
+    <!-- siva  -->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
     <!-- code by bharath  -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
     <link href="assets/css/admin.css" rel="stylesheet">
@@ -49,8 +51,8 @@
       <script src="assets/js/popper.min.js"></script>
       <script src="assets/js/bootstrap.bundle.min.js"></script>
       <script src="assets/js/owl.carousel.js"></script>
-      <script src="assets/js/jquery-searchbox.js"></script>
-      <script type="text/javascript" src="assets/js/jquery.sticky.js"></script>
+      <!-- <script src="assets/js/jquery-searchbox.js"></script>
+      <script type="text/javascript" src="assets/js/jquery.sticky.js"></script> -->
       <!-- Range slider code -->
       <script src="assets/js/d3RangeSlider.js"></script>
       <script src="https://d3js.org/d3.v5.min.js"></script>
@@ -58,6 +60,9 @@
       <script src="https://unpkg.com/phosphor-icons"></script>
       <script src="assets/js/dropzone.js"></script>
       <script src="assets/js/custom.js"></script>
+
+      <!-- siva  -->
+      <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> -->
       <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
 
 <!-- 
@@ -89,6 +94,18 @@
               bs_input_file();
           });
       </script>
+
+<script>
+    $(document).ready(function(){
+    
+      $("#show").click(function(){
+        $(".showtable").hide();
+      });
+    });
+    </script> 
+
+
+
 
       <script type="text/javascript">
           var slider = createD3RangeSlider(0, 10, "#container", true);
@@ -163,6 +180,11 @@
      }
 
       </script>
+<!-- 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script> -->
+
   </body>
 
   </html>
