--- a/src/index.html
+++ b/src/index.html
@@ -51,8 +51,8 @@
       <script src="assets/js/popper.min.js"></script>
       <script src="assets/js/bootstrap.bundle.min.js"></script>
       <script src="assets/js/owl.carousel.js"></script>
-      <!-- <script src="assets/js/jquery-searchbox.js"></script>
-      <script type="text/javascript" src="assets/js/jquery.sticky.js"></script> -->
+      <script src="assets/js/jquery-searchbox.js"></script>
+      <script type="text/javascript" src="assets/js/jquery.sticky.js"></script>
       <!-- Range slider code -->
       <script src="assets/js/d3RangeSlider.js"></script>
       <script src="https://d3js.org/d3.v5.min.js"></script>
